Switch to KubernetesTestSupport (#1715)